--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "https": "^1.0.0",
     "https-browserify": "^1.0.0",
     "vue": "^3.0.0",
+    "vue-router": "^4.1.6",
     "web3": "^1.8.1"
   },
   "devDependencies": {
