update to include device id fronius .env

--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@ VUE_APP_FRONIUS_USERID=simon@decentralize.global
 VUE_APP_FRONIUS_PASSWORD=High3tt@
 VUE_APP_FRONIUS_ACCESS_KEY_ID=FKIAAB27DE06AEFF4C14B2F9559FA75CB559
 VUE_APP_FRONIUS_ACCESS_KEY_VALUE=8807d6c0-0a4a-4b9d-b943-e7c1ab3e5627
+VUE_APP_FRONIUS_DEVICE_ID=https://api.solarweb.com/swqapi/pvsystems/ae93ef37-777f-41ec-b289-0c634f0a8e9b/flowdata
 
 VUE_APP_ENERGY_GROUP_DHT=""
